// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverOverlay actions and hover empty 1`] = `
<HoverOverlay
  actionsOrError={Array []}
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError={null}
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    >
      <em>
        No hover information available.
      </em>
    </div>
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay actions and hover error 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <div
      className="hover-overlay__hover-error"
    >
      M2
    </div>
  </div>
</div>
`;

exports[`HoverOverlay actions and hover loading 1`] = `
<HoverOverlay
  actionsOrError="loading"
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError="loading"
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    >
      <div
        className="hover-overlay__loader-row"
      >
        <LoadingSpinner>
          <div
            className="loading-spinner "
          />
        </LoadingSpinner>
      </div>
    </div>
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay actions and hover present 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <span
      className="hover-overlay__content e2e-tooltip-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>v</p>
",
        }
      }
    />
  </div>
  <div
    className="hover-overlay__actions"
  >
    <ActionItem
      action={
        Object {
          "command": "c",
          "id": "a",
        }
      }
      className="hover-overlay__action e2e-tooltip-untitled"
      disabledDuringExecution={true}
      extensionsController={
        Object {
          "executeCommand": [Function],
        }
      }
      key="0"
      location="[Location path=/]"
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      showInlineError={true}
      showLoadingSpinnerDuringExecution={true}
      telemetryService={
        Object {
          "log": [Function],
        }
      }
      variant="actionItem"
    />
  </div>
</div>
`;

exports[`HoverOverlay actions and hover undefined 1`] = `
<HoverOverlay
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
/>
`;

exports[`HoverOverlay actions empty 1`] = `
<HoverOverlay
  actionsOrError={Array []}
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    />
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay actions error 1`] = `""`;

exports[`HoverOverlay actions error, hover present 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <span
      className="hover-overlay__content e2e-tooltip-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>v</p>
",
        }
      }
    />
  </div>
</div>
`;

exports[`HoverOverlay actions loading 1`] = `
<HoverOverlay
  actionsOrError="loading"
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    />
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay actions present 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  />
  <div
    className="hover-overlay__actions"
  >
    <ActionItem
      action={
        Object {
          "command": "c",
          "id": "a",
          "title": "Some title",
        }
      }
      className="hover-overlay__action e2e-tooltip-some-title"
      disabledDuringExecution={true}
      extensionsController={
        Object {
          "executeCommand": [Function],
        }
      }
      key="0"
      location="[Location path=/]"
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      showInlineError={true}
      showLoadingSpinnerDuringExecution={true}
      telemetryService={
        Object {
          "log": [Function],
        }
      }
      variant="actionItem"
    />
  </div>
</div>
`;

exports[`HoverOverlay actions present, hover loading 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <div
      className="hover-overlay__loader-row"
    >
      <LoadingSpinner />
    </div>
  </div>
  <div
    className="hover-overlay__actions"
  >
    <ActionItem
      action={
        Object {
          "command": "c",
          "id": "a",
        }
      }
      className="hover-overlay__action e2e-tooltip-untitled"
      disabledDuringExecution={true}
      extensionsController={
        Object {
          "executeCommand": [Function],
        }
      }
      key="0"
      location="[Location path=/]"
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      showInlineError={true}
      showLoadingSpinnerDuringExecution={true}
      telemetryService={
        Object {
          "log": [Function],
        }
      }
      variant="actionItem"
    />
  </div>
</div>
`;

exports[`HoverOverlay actions, hover and alert present 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <span
      className="hover-overlay__content e2e-tooltip-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>v</p>
",
        }
      }
    />
  </div>
  <div
    className="hover-overlay__alerts"
  >
    <div
      className="hover-overlay__alert"
      key="a"
    >
      <div
        className="hover-overlay__alert-content"
      >
        <small>
          b 
          <small>
            c
          </small>
           
          <code>
            d
          </code>
        </small>
        <a
          className="hover-overlay__alert-close"
          href=""
          onClick={[Function]}
        >
          <small>
            Dismiss
          </small>
        </a>
      </div>
    </div>
  </div>
  <div
    className="hover-overlay__actions"
  >
    <ActionItem
      action={
        Object {
          "command": "c",
          "id": "a",
        }
      }
      className="hover-overlay__action e2e-tooltip-untitled"
      disabledDuringExecution={true}
      extensionsController={
        Object {
          "executeCommand": [Function],
        }
      }
      key="0"
      location="[Location path=/]"
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      showInlineError={true}
      showLoadingSpinnerDuringExecution={true}
      telemetryService={
        Object {
          "log": [Function],
        }
      }
      variant="actionItem"
    />
  </div>
</div>
`;

exports[`HoverOverlay hover empty 1`] = `
<HoverOverlay
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError={null}
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
/>
`;

exports[`HoverOverlay hover error 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <div
      className="hover-overlay__hover-error"
    >
      M
    </div>
  </div>
</div>
`;

exports[`HoverOverlay hover error, actions present 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <div
      className="hover-overlay__hover-error"
    >
      M
    </div>
  </div>
  <div
    className="hover-overlay__actions"
  >
    <ActionItem
      action={
        Object {
          "command": "c",
          "id": "a",
        }
      }
      className="hover-overlay__action e2e-tooltip-untitled"
      disabledDuringExecution={true}
      extensionsController={
        Object {
          "executeCommand": [Function],
        }
      }
      key="0"
      location="[Location path=/]"
      platformContext={
        Object {
          "forceUpdateTooltip": [Function],
          "settings": "[Observable]",
        }
      }
      showInlineError={true}
      showLoadingSpinnerDuringExecution={true}
      telemetryService={
        Object {
          "log": [Function],
        }
      }
      variant="actionItem"
    />
  </div>
</div>
`;

exports[`HoverOverlay hover loading 1`] = `
<HoverOverlay
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError="loading"
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    >
      <div
        className="hover-overlay__loader-row"
      >
        <LoadingSpinner>
          <div
            className="loading-spinner "
          />
        </LoadingSpinner>
      </div>
    </div>
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay hover present 1`] = `
<HoverOverlay
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError={
    Object {
      "contents": Array [
        Object {
          "kind": "markdown",
          "value": "v",
        },
      ],
    }
  }
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    >
      <span
        className="hover-overlay__content e2e-tooltip-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>v</p>
",
          }
        }
      />
    </div>
  </div>
</HoverOverlay>
`;

exports[`HoverOverlay hover present, actions loading 1`] = `
<div
  className="hover-overlay"
  style={
    Object {
      "left": "0px",
      "opacity": 1,
      "top": "0px",
      "visibility": "visible",
    }
  }
>
  <div
    className="hover-overlay__contents"
  >
    <span
      className="hover-overlay__content e2e-tooltip-content"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>v</p>
",
        }
      }
    />
  </div>
</div>
`;

exports[`HoverOverlay multiple hovers present 1`] = `
<HoverOverlay
  extensionsController={
    Object {
      "executeCommand": [Function],
    }
  }
  hoverOrError={
    Object {
      "contents": Array [
        Object {
          "kind": "markdown",
          "value": "v",
        },
        Object {
          "kind": "markdown",
          "value": "v2",
        },
      ],
    }
  }
  hoveredToken={
    Object {
      "character": 2,
      "commitID": "c",
      "filePath": "f",
      "line": 1,
      "repoName": "r",
      "revision": "v",
    }
  }
  isLightTheme={false}
  location="[Location path=/]"
  overlayPosition={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  platformContext={
    Object {
      "forceUpdateTooltip": [Function],
      "settings": "[Observable]",
    }
  }
  showCloseButton={false}
  telemetryService={
    Object {
      "log": [Function],
    }
  }
>
  <div
    className="hover-overlay"
    style={
      Object {
        "left": "0px",
        "opacity": 1,
        "top": "0px",
        "visibility": "visible",
      }
    }
  >
    <div
      className="hover-overlay__contents"
    >
      <span
        className="hover-overlay__content e2e-tooltip-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>v</p>
",
          }
        }
      />
      <hr />
      <span
        className="hover-overlay__content e2e-tooltip-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>v2</p>
",
          }
        }
      />
    </div>
  </div>
</HoverOverlay>
`;
